# dl_real_time_drilling

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
configs/: data.yaml  mlflow.yaml  model.yaml  train.yaml
data/: README.md
docs/: project_description.md  volve_data_context.md
notebooks/: eda_time.ipynb
scripts/: bootstrap_mlflow.sh  download_volve.sh  run_api.sh
src/dl_real_time_drilling/app/: logging.py  settings.py
src/dl_real_time_drilling/dataprep/: cleaning.py  sources.py  transforms.py
src/dl_real_time_drilling/models/: base.py  lightning_module.py  onnx_export.py
src/dl_real_time_drilling/pipelines/: stream.py
src/dl_real_time_drilling/serving/: api.py  inference_mlflow.py
src/dl_real_time_drilling/training/: train_mlflow.py
src/dl_real_time_drilling/utils/: timing.py
src/training/: train_mlflow.py
tests/: test_cleaning.py  test_features.py  test_inference.py
